# memory-agent

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVAL.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/phases/01-schema-ports-local-core-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-05-SUMMARY.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md
.planning/phases/02-consolidation-supersession/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-PATTERNS.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-forgetting-salience-floor-budget-packer-mcp/: 03-00-PLAN.md  03-00-SUMMARY.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-04-SUMMARY.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/blog/: why-mnema-and-how-to-use-it.md
src/mnema/: __init__.py  config.py  migrate.py
src/mnema/core/: buffer.py  classifier.py  (+7 more)
tests/: conftest.py  test_consolidation.py  test_cron.py  test_decay.py  test_demo_coach.py  test_embedding_adapters.py  test_eval_baseline.py  test_factory.py  test_forgetting.py  test_mcp_server.py  test_providers.py  test_recall_packer.py  test_reindex.py  test_remember_recall.py  test_scheduler.py  test_schema.py  test_scope_isolation.py  test_sdk_interface.py  test_vault.py  test_write_path.py
tests/conformance/: __init__.py  conftest.py  test_embedding_contract.py  test_fixture_smoke.py  test_llm_contract.py  test_object_store_contract.py  test_record_store_contract.py  test_scheduler_contract.py  test_vault_contract.py  test_vector_index_contract.py
(+94 files in other folders)
