[project]
name = "mnema"
version = "0.1.0"
description = "Portable provider-agnostic memory engine for AI agents"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
    "aiosqlite>=0.22",
    "sqlite-vec>=0.1.9",
    "numpy>=2.4",
    "apscheduler>=3.11,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.4",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnema"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src/mnema"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
