[project]
name = "mnema"
version = "0.1.0"
description = "Portable provider-agnostic memory engine for AI agents"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
    "aiosqlite>=0.22",
    "sqlite-vec>=0.1.9",
    "numpy>=2.4",
    "apscheduler>=3.11,<4",
    "fastmcp>=3.4.2,<4",
    "tiktoken>=0.13",
]

[project.optional-dependencies]
cloud = [
    "anthropic>=0.109.1,<0.110",
    "dashscope>=1.25.21,<2",
    "voyageai>=0.4.0,<0.5",
    "psycopg[binary,pool]>=3.3,<4",
    "pgvector>=0.4.2,<0.5",
    "boto3>=1.43,<2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.4",
    "ruff",
    "pyright",
    "hypothesis>=6.155",
    "testcontainers[postgres]>=4.14,<5",
    "moto[s3]>=5,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnema"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src/mnema"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
